unpackaged/main/default/objects/GC_Core_Session__c/GC_Core_Session__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Core Session Object.  This object maintains the session ID per user along with expiration values to determine when it needs to refresh it&#39;s session.</description>
    <label>Core Session</label>
    <nameField>
        <displayFormat>GCS-{0000}</displayFormat>
        <label>Core Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>