unpackaged/main/default/objects/GC_Core_Session__c/fields/Core_Application_Login_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Core_Application_Login_Expiration__c</fullName>
    <label>Core Application Login Expiration</label>
    <type>DateTime</type>
</CustomField>