unpackaged/main/default/objects/GC_Core_Session__c/fields/Core_Application_Session_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Core_Application_Session_Error_Message__c</fullName>
    <label>Core Application Session Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>