unpackaged/main/default/objects/GC_Core_Session__c/fields/Core_Application_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Core_Application_Session_ID__c</fullName>
    <label>Core Application Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>