unpackaged/main/default/objects/GC_Core_Session__c/fields/Expresso_Session_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Expresso_Session_Error_Message__c</fullName>
    <description>if any error occurs while obtaining a session from expresso, it will be stored here</description>
    <label>Expresso Session Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>