unpackaged/main/default/objects/GC_Core_Session__c/fields/Expresso_Session_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expresso_Session_Expiration__c</fullName>
    <description>stores the expiration date for the stored expresso session ID</description>
    <label>Expresso Session Expiration</label>
    <type>DateTime</type>
</CustomField>