unpackaged/main/default/objects/GC_Core_Session__c/fields/Expresso_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Expresso_Session_ID__c</fullName>
    <description>Stores the session ID obtained from Expresso</description>
    <label>Expresso Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>