unpackaged/main/default/objects/GC_Core_Session__c/fields/Is_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Logged In</label>
    <type>Checkbox</type>
</CustomField>