unpackaged/main/default/objects/GC_Core_Session__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Core_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>